--- a/05_Regional_Climate_Trends/Guides/4_Climate_Change_and_Broader_Impacts.Rnw
+++ b/05_Regional_Climate_Trends/Guides/4_Climate_Change_and_Broader_Impacts.Rnw
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{natbib}
+
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
@@ -15,7 +16,7 @@
 
 \title{Guide 4: Climate Science, Broken Information Sources, and Democratic Engagement}
 \author{Marc Los Huertos}
-\date{\today~(ver. 0.75)} 
+\date{\today~(ver. 0.79)} 
 
 \begin{document}
 \maketitle
@@ -49,18 +50,61 @@ The National Science Foundation (NSF) emphasizes the importance of broader impac
 
 \end{enumerate}
 
-By integrating digital media with climate science communication, this project aligns with NSF’s broader impacts by increasing scientific literacy, expanding participation in STEM, and promoting informed decision-making for the benefit of society.
+By integrating digital media with climate science communication, this project aligns with NSF's broader impacts by increasing scientific literacy, expanding participation in STEM, and promoting informed decision-making for the benefit of society.
 
 
 \subsection{Goals}
 
 The goal of producing a YouTube video on climate change is to develop clear, engaging, and accessible communication strategies that effectively convey climate science to a broad audience. Climate change is complex, and while scientific data is essential, the way it is presented can determine whether it resonates with viewers or gets overlooked. This project aims to bridge that gap by translating technical concepts into compelling narratives that inform, engage, and inspire action.
 
+
+
+\subsection{Approach}
+
+Climate change is often perceived as an abstract, global phenomenon. However, integrating personal narratives with scientific analysis provides a compelling approach to storytelling that makes climate change tangible and urgent.
+
+A well-structured climate change narrative should:
+\begin{enumerate}
+    \item Begin with a relatable anecdote.
+    \item Support it with scientific literature.
+    \item Validate it with regional climate data.
+    \item Conclude with actionable solutions.
+\end{enumerate}
+This approach ensures climate storytelling is both emotionally compelling and scientifically robust.
+
+\subsubsection{Anecdotal Evidence and Human Connection}
+
+Anecdotal accounts serve as an entry point, offering emotional engagement. Examples include:
+\begin{itemize}
+    \item Farmers experiencing shifts in growing seasons.
+    \item Firefighters witnessing increasingly intense wildfires.
+    \item Coastal residents coping with recurrent flooding.
+\end{itemize}
+These narratives humanize climate data, fostering a deeper connection with audiences.
+
+\subsubsection{Scientific Corroboration}
+To ground these stories in rigorous science, we integrate findings from:
+\begin{itemize}
+    \item \textbf{IPCC Reports}: Providing long-term climate trends and projections.
+    \item \textbf{Peer-Reviewed Literature}: Establishing causal links between human activity and climate change.
+    \item \textbf{Historical Climate Comparisons}: Highlighting shifts from pre-industrial periods to present.
+\end{itemize}
+By contextualizing personal experiences with robust data, we reinforce their legitimacy.
+
+\subsubsection{Regional Weather and Climate Data}
+Localizing the narrative enhances its relevance. Sources include:
+\begin{itemize}
+    \item NOAA and NASA datasets on temperature and precipitation trends.
+    \item Municipal reports on sea level rise and wildfire frequency.
+    \item Comparative analyses of historical weather records.
+\end{itemize}
+These insights bridge global climate patterns with community-level impacts.
+
+\subsubsection{Scipting a Narrative}
+
 Scripting a regional climate change story for YouTube requires a balance between storytelling, scientific accuracy, and audience engagement. By effectively using A-roll and B-roll, integrating best practices in science communication, and ensuring a strong narrative structure, this project can create an impactful video that educates and inspires viewers to take climate action. Additionally, using Premiere Pro's basic tools, you can create a polished, professional video that effectively communicates your message.
 
-\medskip
-
-\noindent Specifically, this video will:
+\noindent Ideallyt, these video will:
 
 \begin{description}
   \item[Connect Local Experiences to Global Climate Trends] By using real-world weather data from local stations, the video will demonstrate how regional patterns fit into the broader context of climate change, helping viewers see the link between their everyday experiences and global shifts.
@@ -77,9 +121,6 @@ Scripting a regional climate change story for YouTube requires a balance between
 Through this process, we will refine our ability to communicate climate science in a clear and impactful way, ensuring that complex data translates into meaningful understanding. 
 
 This video will serve as both a learning experience and a resource for broader climate education efforts.
-
-\subsection{Approach}
-
 \subsubsection{US EPA Climate Change State Summaries}
 
 The US EPA provides a summary of climate change impacts on each state. This is a good place to start to understand the potential impacts of climate change on the local community. Here's a link to the \href{https://19january2017snapshot.epa.gov/climate-impacts/climate-change-impacts-state_.html}{US EPA 2017 Climate Change State Snapshots}. More recent are the \href{https://statesummaries.ncics.org/}{EPA State 2022 Climate Summaries}.
@@ -154,27 +195,6 @@ The role of social media in communicating the impacts of climate change is an im
 
 \end{description}
 
-\subsection{Lessions Learned}
-
-The research on social media trends and efficacy is a mixed bag. Some studies suggest that the public is not interested in the science of climate change, but rather the impacts of climate change on their lives. Others suggest that the public is interested in the science of climate change, but that the impacts of climate change on their lives are not well communicated.
-
-\subsection{Critique of Marc's Channel}
-
-There exists a tension between professionalism and amature content. The professional content is often over produced, while the amature content is might be retain some of the personality of the content producer and relatability. 
-
-\begin{itemize}
-
-\item Slower fuew words
-\item Text is too static and rushed
-\item Use Logo/State identifiers
-\item Tagline / jingle
-\item Here's how to get involved
-\item Station information more friendly
-\item Less wordiness, more oral communication
-\item Face on video
-\item better use of hashtags
-\item more information on state policy/activities
-\end{itemize}
 
 %\subsubsection{Practicalities of the Tiktok Platform}
 
@@ -190,6 +210,32 @@ There exists a tension between professionalism and amature content. The professi
 \citet{putnam2000bowling} argues that the decline of social capital in the United States is a result of the decline of civic engagement. This is a problem because social capital is a key ingredient in the functioning of democratic institutions.
 
 A strong sense of community belonging can be a powerful force in combating climate change by fostering collective action, shared responsibility, and resilience. When people feel connected to their neighbors and local institutions, they are more likely to participate in sustainability initiatives, advocate for climate policies, and adopt environmentally friendly behaviors. Social norms within close-knit communities can encourage individuals to make sustainable choices, such as reducing waste, adopting clean energy, or using public transportation, as these behaviors become a shared expectation rather than an individual burden. Belonging also strengthens local resilience—communities with strong social ties are better equipped to respond to climate disasters, mobilizing mutual aid, resource-sharing, and local adaptation efforts like urban microgrids or emergency preparedness networks. Furthermore, a deep connection to place fosters environmental stewardship, motivating communities to engage in conservation, urban greening, and climate activism. When local groups organize around climate action, their efforts can scale up to influence broader policies and systemic change. By rebuilding social bonds and reinforcing a collective identity, communities can transform climate action from an individual challenge into a shared commitment, countering the social fragmentation that\citet{putnam2000bowling} described in Bowling Alone.
+
+
+\section{Evaluating Previous Videos}
+
+\subsection{Lessions Learned}
+
+The research on social media trends and efficacy is a mixed bag. Some studies suggest that the public is not interested in the science of climate change, but rather the impacts of climate change on their lives. Others suggest that the public is interested in the science of climate change, but that the impacts of climate change on their lives are not well communicated.
+
+\subsection{Critique of Marc's Channel}
+
+There exists a tension between professionalism and amateur content. The professional content is often over produced, while the amateur content is might be retain some of the personality of the content producer and reliability. 
+
+\begin{itemize}
+
+\item Slower fuew words
+\item Text is too static and rushed
+\item Use Logo/State identifiers
+\item Tagline / jingle
+\item Here's how to get involved
+\item Station information more friendly
+\item Less wordiness, more oral communication
+\item Face on video
+\item better use of hashtags
+\item more information on state policy/activities
+\end{itemize}
+
 
 
 % bibliography section here-------------------------------------------
