--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,15 @@
+@article{lteif2024climate,
+  title={Climate action now: How to fuel a social movement},
+  author={Lteif, Lama and Nardini, Gia and Rank-Christman, Tracy and Block, Lauren and Bublitz, Melissa G and Catlin, Jesse R and Cross, Samantha NN and Hamby, Anne and Peracchio, Laura A},
+  journal={Journal of Consumer Psychology},
+  volume={34},
+  number={1},
+  pages={119--139},
+  year={2024},
+  publisher={Wiley Online Library}
+}
+
+
 @Manual{R-base,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
@@ -131,4 +143,5 @@
   author={Soetaert, Karline and Meysman, Filip and Soetaert, Maintainer Karline},
   year={2017}
 }
+
 
