--- a/05_Regional_Climate_Trends/Guides/4_Climate_Change_and_Broader_Impacts_and_Activism.Rnw
+++ b/05_Regional_Climate_Trends/Guides/4_Climate_Change_and_Broader_Impacts_and_Activism.Rnw
@@ -13,24 +13,116 @@
 \colorlet{LightRubineRed}{RubineRed!100}
 \definecolor{mypink2}{RGB}{219, 48, 122}
 
-\title{Guide 4: Climate Science, State Policy, and Local Activism}
+\title{Guide 4: Climate Science Narratives: Broader Impacts, Broken Information Sources, and Community Belonging}
 \author{Marc Los Huertos}
-\date{\today~(ver. 0.49)} 
+\date{\today~(ver. 0.79)} 
 
 \begin{document}
 \maketitle
 
 \section{Introduction}
 
+\subsection{Broader Impacts \& NSF}
+
 The broader impacts of climate science are far reaching and include the potential to inform policy, improve our understanding of the natural world, and to provide information to the public that can help them make informed decisions. This document is a guide to help you explore the broader impacts of climate science.
+
+The National Science Foundation (NSF) emphasizes the importance of broader impacts by supporting activities that benefit society and contribute to specific societal outcomes. This project—developing a YouTube video to communicate climate change science—aligns with NSF’s broader impacts in the following ways:
+
+\begin{enumerate}
+    \item \textit{Increasing public scientific literacy and engagement with STEM}.  
+    This video will make climate science more accessible by translating complex climate data into clear, engaging content for a broad audience. By connecting local weather experiences to global climate trends, the video will enhance public understanding of climate change and its long-term implications.
+
+    \item \textit{Enhancing research-based science communication}.  
+    Effective communication of scientific findings is essential for translating research into societal benefits. This project provides hands-on experience in developing digital media to communicate climate science in a compelling and accessible way, helping bridge the gap between researchers and the public.
+
+    \item \textit{Broadening participation of underrepresented groups in STEM}.  
+    By making climate education freely available on a widely used digital platform, this video has the potential to reach diverse audiences, including students and communities that may not have direct access to formal climate education. This aligns with NSF’s goal of expanding STEM participation across different demographic and geographic groups.
+
+    \item \textit{Informing evidence-based decision-making}.  
+    Public understanding of climate change is critical for informed decision-making at personal, community, and policy levels. By providing clear, data-driven explanations, this project contributes to a more scientifically literate society that can engage with climate-related challenges based on evidence rather than misinformation.
+
+    \item \textit{Creating sustainable educational resources with broad reach}.  
+    Unlike traditional classroom lectures or academic publications, a YouTube video remains freely available to educators, students, and the general public over time. This ensures a lasting impact by serving as an ongoing resource for climate education.
+
+    \item \textit{Contributing to societal well-being and resilience}.  
+    Climate change has wide-ranging effects on ecosystems, economies, and communities. By improving climate literacy, this project supports efforts to enhance societal resilience and preparedness for climate-related risks, contributing to long-term societal benefits.
+
+\end{enumerate}
+
+By integrating digital media with climate science communication, this project aligns with NSF's broader impacts by increasing scientific literacy, expanding participation in STEM, and promoting informed decision-making for the benefit of society.
+
 
 \subsection{Goals}
 
-Create a compelling story for a social media audience. 
+The goal of producing a YouTube video on climate change is to develop clear, engaging, and accessible communication strategies that effectively convey climate science to a broad audience. Climate change is complex, and while scientific data is essential, the way it is presented can determine whether it resonates with viewers or gets overlooked. This project aims to bridge that gap by translating technical concepts into compelling narratives that inform, engage, and inspire action.
 
-Our goal is to provide information to the public that can help them make informed decisions based on the trustworthy analysis of weather data. Using station data analysis from a state of your choosing, along with the EPA Climate Change Status Documents, we describe climate change trends, it's potential impacts on the local community, and what local activists groups are doing to mitigate the impacts of climate change.
+
 
 \subsection{Approach}
+
+Climate change is often perceived as an abstract, global phenomenon. However, integrating personal narratives with scientific analysis provides a compelling approach to storytelling that makes climate change tangible and urgent.
+
+A well-structured climate change narrative should:
+\begin{enumerate}
+    \item Begin with a relatable anecdote.
+    \item Support it with scientific literature.
+    \item Validate it with regional climate data.
+    \item Conclude with actionable solutions.
+\end{enumerate}
+This approach ensures climate storytelling is both emotionally compelling and scientifically robust.
+
+\subsubsection{Anecdotal Evidence and Human Connection}
+
+Anecdotal accounts serve as an entry point, offering emotional engagement. Examples include:
+\begin{itemize}
+    \item Farmers experiencing shifts in growing seasons.
+    \item Firefighters witnessing increasingly intense wildfires.
+    \item Coastal residents coping with recurrent flooding.
+\end{itemize}
+These narratives humanize climate data, fostering a deeper connection with audiences.
+
+\subsubsection{Scientific Corroboration}
+To ground these stories in rigorous science, we integrate findings from:
+\begin{itemize}
+    \item \textbf{IPCC Reports}: Providing long-term climate trends and projections.
+    \item \textbf{Peer-Reviewed Literature}: Establishing causal links between human activity and climate change.
+    \item \textbf{Historical Climate Comparisons}: Highlighting shifts from pre-industrial periods to present.
+\end{itemize}
+By contextualizing personal experiences with robust data, we reinforce their legitimacy.
+
+\subsubsection{Regional Weather and Climate Data}
+Localizing the narrative enhances its relevance. Sources include:
+\begin{itemize}
+    \item NOAA and NASA datasets on temperature and precipitation trends.
+    \item Municipal reports on sea level rise and wildfire frequency.
+    \item Comparative analyses of historical weather records.
+\end{itemize}
+These insights bridge global climate patterns with community-level impacts.
+
+\subsubsection{Scripting a Narrative}
+
+Scripting a regional climate change story for YouTube requires a balance between storytelling, scientific accuracy, and audience engagement. By effectively using A-roll and B-roll, integrating best practices in science communication, and ensuring a strong narrative structure, this project can create an impactful video that educates and inspires viewers to take climate action. Additionally, using Premiere Pro's basic tools, you can create a polished, professional video that effectively communicates your message.
+
+\noindent Ideally, these video will:
+
+\begin{description}
+  \item[Connect Local Experiences to Global Climate Trends] By using real-world weather data from local stations, the video will demonstrate how regional patterns fit into the broader context of climate change, helping viewers see the link between their everyday experiences and global shifts.
+
+  \item[Address Common Misconceptions] Many people focus only on short-term or local weather patterns, leading to skepticism about larger climate trends. The video will counteract this by illustrating long-term climate data, historical changes, and the importance of distinguishing between weather and climate.
+
+  \item[Highlight Regional Climate Impacts] Climate change does not affect all regions equally. This project will showcase how climate impacts vary across different locations, emphasizing the disproportionate effects on vulnerable communities while making these issues relatable to a general audience.
+
+  \item[Experiment with Effective Climate Communication] The video will explore different storytelling techniques, visualizations, and narratives to determine which methods are most effective in making climate science understandable and engaging.
+
+  \item[Encourage Action and Awareness] The ultimate goal is not just to inform but to inspire. By providing clear takeaways, practical actions, and relatable examples, the video will aim to motivate viewers to think critically about climate change and consider ways they can contribute to solutions.
+\end{description}
+
+Through this process, we will refine our ability to communicate climate science in a clear and impactful way, ensuring that complex data translates into meaningful understanding. 
+
+This video will serve as both a learning experience and a resource for broader climate education efforts.
+\subsubsection{US EPA Climate Change State Summaries}
+
+The US EPA provides a summary of climate change impacts on each state. This is a good place to start to understand the potential impacts of climate change on the local community. Here's a link to the \href{https://19january2017snapshot.epa.gov/climate-impacts/climate-change-impacts-state_.html}{US EPA 2017 Climate Change State Snapshots}. More recent are the \href{https://statesummaries.ncics.org/}{EPA State 2022 Climate Summaries}.
 
 \subsubsection{US EPA Climate Change State Summaries}
 
@@ -42,10 +134,9 @@ library(xtable)
 
 @ 
 
-
 How do these summaries align with our data analysis process?  Is there a way to use the EPA summaries to inform our data analysis process? And how does both of these sources help use develop a compelling story for a social media audience?
 
-\subsection{State Policy}
+\subsubsection{State Policy}
 
 There are several ways that climate science can inform state policy. For example, the California Climate Change Center provides a wealth of information on the impacts of climate change on the state of California. But finding these resources for each state can be a challenge. I found a few resources that might help you get started.
 
@@ -59,14 +150,16 @@ All information contained in this database is derived from information in the pu
 
 \end{description}
 
-\section{Communicating to a Specific Public}
+\section{Communicating to a Public with Intention}
 
 \subsection{Potential Narrative Characteristics}
 
 \begin{description}
 
 \item[Trustworthy Source] In my mind, we need to demonstrate that the information we are providing is trustworthy. This is a challenge on social media, but we can provide links to the data sources and the analysis we used to develop our story.
+
 \item[Simple, clear messages] In some circles, scientists talk about "K.I.S.S." as a general principle to communicate science: Keep It Simple, Stupid. This is not to say that the audience is stupid, but rather that simple, clear messages are more likely to be understood and remembered.
+
 \item[Behaviors easy, fun, and popular] This is a challenge! Using a critique of the market forces does not empower many, thus, we need to create a mechanism for social change that is actionable and realistic. 
 
 \end{description}
@@ -77,6 +170,8 @@ Developing a robust method to analyze weather stations is both time consuming an
 
 \begin{enumerate}
 \item To improve public understanding, \citet{maibach2023harnessing} recommend simple, clear messages, repeated often, by a variety of trusted and caring messengers.
+
+\item Connect to personal experiences and sense of place. \citet{scannell2013personally}  found that climate change engagement was significantly predicted by place attachment, receiving a locally relevant message, and being female, offering insights for more effective climate communication.
 
 \item To encourage uptake of useful behaviors, \citet{maibach2023harnessing} recommend making the behaviors easy, fun, and popular.
 
@@ -91,18 +186,25 @@ The role of social media in communicating the impacts of climate change is an im
 
 \begin{description}
 
-\item[\citet{scannell2013personally}] %argue that the public is not interested in the science of climate change, but rather the impacts of climate change on their lives. Is there a way to develop a story that is compelling while being scientifically accurate?
+\item[\citet{lteif2024climate}] develop a framework for accelerating grassroots climate action by identifying psychological mechanisms that motivate individuals and communities to engage in the climate movement. By redefining consumers as active participants in social action, the authors call on consumer psychologists to study both individual and collective behaviors that drive meaningful climate engagement.
 
-\item[\citet{maibach2023harnessing}]% suggest two guiding heuristics to enhance society's response to climate change:
+\item[\citet{scannell2013personally}] A study of 324 British Columbia residents found that climate change engagement was significantly predicted by place attachment, receiving a locally relevant message, and being female, offering insights for more effective climate communication. 
 
-\item[\citet{makela2024climate}]
+\item[\citet{maibach2023harnessing}] present two evidence-based heuristics to improve climate communication and encourage behavior change: delivering simple, clear messages repeatedly through trusted messengers and making climate-friendly behaviors easy, fun, and popular. By applying insights from communication and behavioral science, these strategies aim to help decision-makers and the public respond more effectively to climate challenges.
 
-\item[\citet{kresin2024students}]
+\item[\citet{makela2024climate}] explores how the intersection of climate change and social media shapes climate narratives, often amplifying polarization rather than collective action. Using new formalism, the author examine how viral climate stories rely on experiential storytelling, masterplots, and moral positioning, highlighting the challenges of effective science communication in the digital age.
 
-\item[\citet{nieto2024communicating}] %found %Theresultsshowasignificant reductioninthenumberofCC-related videos published during Sharm el-Sheikh COP27 compared to GlasgowCOP26.VideosaddressingCC-relatedissuesarenotamajority. . 
+\item[\citet{kresin2024students}] The rise of social media has amplified the spread of scientific misinformation, highlighting the need for science education to foster media literacy and improve students' ability to evaluate credibility. This study of 10th-grade students found that while they use criteria from content, source, and composition dimensions to assess credibility, gaps remain in effectively applying these heuristics, underscoring the need for improved teaching materials.
+
+\item[\citet{nieto2024communicating}] analyze climate change communication on TikTok during COP26 (Glasgow) and COP27 (Sharm el-Sheikh), revealing a significant decline in climate-related content and a shift from environmental discussions to political discourse in 2022. The authors highlight that influencers and media—primarily men—dominate climate messaging on TikTok, with minimal citation of information sources, reflecting a broader lack of educational and informative content on the platform.
+
+%found %Theresultsshowasignificant reductioninthenumberofCC-related videos published during Sharm el-Sheikh COP27 compared to GlasgowCOP26.VideosaddressingCC-relatedissuesarenotamajority. . 
 %both influencers and the media are the ones who published the most, and men are more likely communicating CC onthe platform. . Influencers and TikTok users no longer communicate environmental or socio-cultural issues at COP27. They create a discourse that revolves solely around informationon political issues. . In general terms, there search reflectsthe lack of an educational and informative functionofthe climateissueon TikTok.
 
-\item[\citet{nguyen2023tiktok}]% llustratetheplatform’saffordances:In communicating toabroadaudience,youthtakeonagencyandprosocialstancesandexpressemotionstorelatetoviewersandsituate theircontent.Findingssuggesttheutilityoflearninganalyticsto exploreyouth’sperspectivesandprovideinsightstoframeclimate changeeducationinwaysthatelevatelivedexperiences.]
+\item[\citet{nguyen2023tiktok}] analyzes youth-created TikTok videos on climate change, revealing that content integrating lived experiences is more likely to use a second-person perspective, prosocial language, and a negative messaging tone. Findings suggest that social media enables youth to take agency in climate communication, offering insights for framing climate education to emphasize personal and local experiences.
+
+
+]% llustratetheplatform’saffordances:In communicating toabroadaudience,youthtakeonagencyandprosocialstancesandexpressemotionstorelatetoviewersandsituate theircontent.Findingssuggesttheutilityoflearninganalyticsto exploreyouth’sperspectivesandprovideinsightstoframeclimate changeeducationinwaysthatelevatelivedexperiences.]
 
 \end{description}
 
@@ -114,23 +216,23 @@ The research on social media trends and efficacy is a mixed bag. Some studies su
 
 There exists a tension between professionalism and amature content. The professional content is often over produced, while the amature content is might be retain some of the personality of the content producer and relatability. 
 
-\begin{itemize}
+%\begin{itemize}
 
-\item Slower fuew words
-\item Text is too static and rushed
-\item Use Logo/State identifiers
-\item Tagline / jingle
-\item Here's how to get involved
-\item Station information more friendly
-\item Less wordiness, more oral communication
-\item Face on video
-\item better use of hashtags
-\item more information on state policy/activities
-\end{itemize}
+%\item Slower fuew words
+%\item Text is too static and rushed
+%\item Use Logo/State identifiers
+%\item Tagline / jingle
+%\item Here's how to get involved
+%\item Station information more friendly
+%\item Less wordiness, more oral communication
+%\item Face on video
+%\item better use of hashtags
+%\item more information on state policy/activities
+%\end{itemize}
 
-\subsubsection{Practicalities of the Tiktok Platform}
+\subsubsection{Practicalities of a Social Media Platform}
 
-In spite of the controversies and issues of privacy, Tictok is a powerful tool for communicating the impacts of climate change. We will load the our video on \href{https://www.tiktok.com/@nor_socal}{my TicTok account} to avoid the privacy issues that might arise from using the Tictok API by students.
+Because of the controversies and issues of privacy, I deleted my Tictok account. Thus, will load the our video on \href{https://www.XXX}{my YouTube Channel}.
 
 %\section{Conclusions}
 
