--- a/05_Regional_Climate_Trends/Guides/0_Project_Overview_and_Set_Up.Rnw
+++ b/05_Regional_Climate_Trends/Guides/0_Project_Overview_and_Set_Up.Rnw
@@ -5,7 +5,7 @@
 
 \title{Preparing the Regional Climate Trends Project}
 \author{Marc Los Huertos}
-\date{\today~(ver. 1.01)} % without \date command, current date is supplied
+\date{\today~(ver. 1.02)} % without \date command, current date is supplied
 
 \begin{document}
 \maketitle
@@ -29,12 +29,13 @@ Create a public product (video) that explains climate change trends in a state; 
   \item[Guide 5] Communicating Climate Stories -- Combining Imagery and Audio (Edit a video that explains the data and the results of the analysis.)
 \end{description}
 
-At this point, I created a DRAFT visual flow chart that displays some of the stages. I will be adjusting this chart as we progress, adding detail. Moreover, I'll refine the R code and project guides if we found ambiguities. 
+At this point, I created a DRAFT visual flow chart that displays some of the stages (Figure~\ref{fig:flow-chart}). I will be adjusting this chart as we progress, adding detail. Moreover, I'll refine the R code and project guides if we found ambiguities. 
 
-\begin{figure}
+\begin{figure}[h]
+\centering
+  \includegraphics[width=1.2\textwidth]{figure/Climate_Naratives_Visio_Abstract.png}
   \caption{A flow chart of the project stages.}
   \label{fig:flow-chart}
-  \includegraphics[width=1.3\textwidth]{figure/flow-chart.pdf}
 \end{figure}
 
 \subsection{Approach}
@@ -116,7 +117,7 @@ legend("bottomleft", legend=c(">=1900", "<1900", "<1890", "<1875", "<1865"), pch
 @
 \end{figure}
 
-\subsection{Subsetting the GHCN-d Inventory}
+\subsection{Subsetting the GHCNd Inventory}
 
 The inventory has a list of stations and map coordinates (latitude and longitude). However, it's not easy to select a region, like a state, from the latitude and longitude values. Thus, we need to merge the inventory with a dataset that includes state names and merge them based on the station ID. 
 
